[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ismember"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "Python package ismember returns array elements that are members of set array."
readme = "README.md"
requires-python = ">=3"
license = "MIT"
keywords = ["Python", "ismember", "set membership", "numpy", "array", "set", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    'numpy',
]

[project.urls]
Homepage = "https://erdogant.github.io/ismember"
Download = "https://github.com/erdogant/ismember/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["ismember"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "ismember.__version__" }
